# Voice_Customer_support_Assistant

./: .gitignore  LICENSE  README.md  customer_sup_struct.sql  database_funcs.py  logger_config.py  main.py  prompts.py  pyproject.toml  requirements.txt  sentiment_analysis.py  sentiment_anlysis.py  speech2text.py
